--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -19,7 +19,7 @@ RUN apk update \
 RUN pip install --upgrade pip
 RUN pip install flake8
 COPY . .
-RUN flake8 --ignore=E501,F401 .
+RUN flake8 --ignore=E501,F401 ./todo_server_app
 
 # install dependencies
 COPY ./requirements.txt .
